<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.italk2learn.platform</groupId>
	<artifactId>italk2learn</artifactId>
	<version>1.0</version>
	<packaging>pom</packaging>

	<name>iTalk2Learn</name>
	<url>http://www.italk2learn.eu/</url>
	<description>An open-source platform to combine structured and exploratory activities with speech</description>
	<inceptionYear>2013</inceptionYear>

	<licenses>
		<license>
			<name>GNU Lesser General Public License v3.0</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0-standalone.html</url>
		</license>
	</licenses>

	<organization>
		<name>iTalk2Learn</name>
		<url>http://www.italk2learn.eu/</url>
	</organization>

	<developers>
		<developer>
			<name>Jose Luis Fernandez</name>
			<url>https://github.com/fernandezgom/</url>
		</developer>
	</developers>

	<contributors>
		<!-- in alphabetical order -->
		<contributor>
			<name>Sergio Gutierrez-Santos</name>
		</contributor>
		<contributor>
			<name>Uriel Efren Carballido</name>
		</contributor>
	</contributors>

	<distributionManagement>
		<site>
			<id>it2l</id>
			<url>http://it2l.dcs.bbk.ac.uk/italk2learn/</url>
		</site>
		<downloadUrl>https://github.com/fernandezgom</downloadUrl>
		<repository>
			<id>it2l</id>
			<url>https://it2l.dcs.bbk.ac.uk/maven/italk2learn</url>
		</repository>
		<snapshotRepository>
			<id></id>
			<url></url>
		</snapshotRepository>
	</distributionManagement>

	<mailingLists>
		<mailingList>
			<name>it2l-users</name>
			<archive>http://it2l.dcs.bbk.ac.uk/it2l-users/</archive>
			<post>jlfg@dcs.bbk.ac.uk</post>
			<subscribe>jlfg@dcs.bbk.ac.uk?subject=subscribe</subscribe>
			<unsubscribe>jlfg@dcs.bbk.ac.uk??subject=unsubscribe</unsubscribe>
		</mailingList>
		<mailingList>
			<name>it2l-dev (archived)</name>
			<archive>http://it2l.dcs.bbk.ac.uk/pipermail/it2l-dev/</archive>
		</mailingList>
	</mailingLists>

	<issueManagement>
		<system>GitHub</system>
		<url>https://github.com/fernandezgom/it2l-platform/issues/</url>
	</issueManagement>

	<scm>
		<url>https://github.com/fernandezgom/it2l-platform/</url>
		<connection>scm:git:https://github.com/fernandezgom/it2l-platform/italk2learn.git</connection>
		<developerConnection>scm:git:git@github.com/fernandezgom/it2l-platform.git</developerConnection>
		<tag>HEAD</tag>
	</scm>

	<ciManagement>
		<system></system>
		<url></url>
	</ciManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<!-- this path is defined in the parent POM, but only accessed in the children POMs -->
		<project.local.repository.path>${project.basedir}/../lib/repo</project.local.repository.path>
		<github.global.server>github</github.global.server>
	</properties>

	<prerequisites>
		<maven>3.0.2</maven>
	</prerequisites>

	<modules>
		<module>it2l-common-core</module>
		<module>it2l-speech-orchestration-module</module>
		<module>it2l-student-needs-analysis</module>
		<module>it2l-task-independent-support</module>
		<module>it2l-perceive-difficulty-task</module>
		<module>it2l-sequencer</module>
		<module>it2l-speech-production</module>
		<module>it2l-platform</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			
		</dependencies>
	</dependencyManagement>

	<repositories>

	</repositories>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.5.5</version>
				</plugin>

				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>2.5</version>
				</plugin>

				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>2.8.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>1.4</version>
				</plugin>

				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>2.18.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.1</version>
				</plugin>

				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>2.5</version>
				</plugin>

				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>2.6</version>
				</plugin>

				<plugin>
					<artifactId>maven-site-plugin</artifactId>
					<version>3.4</version>
					<dependencies>
						<dependency>
							<groupId>com.pcl-solutions.maven.wagons</groupId>
							<artifactId>rsync-maven-wagon</artifactId>
							<version>1.0</version>
						</dependency>
						<dependency>
							<groupId>org.apache.maven.doxia</groupId>
							<artifactId>doxia-module-markdown</artifactId>
							<version>1.6</version>
						</dependency>
					</dependencies>
					<configuration>
						<stagingSiteURL>${project.distributionManagement.site.url}</stagingSiteURL>
					</configuration>
				</plugin>

				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>2.3</version>
				</plugin>

				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.17</version>
				</plugin>

				<plugin>
					<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
					<artifactId>maven-java-formatter-plugin</artifactId>
					<version>0.4</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>1.9.1</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>buildnumber-maven-plugin</artifactId>
					<version>1.3</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.gmaven</groupId>
					<artifactId>groovy-maven-plugin</artifactId>
					<version>2.0</version>
				</plugin>

				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>versions-maven-plugin</artifactId>
					<version>2.2</version>
				</plugin>
			</plugins>
		</pluginManagement>

		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.7</source>
					<target>1.7</target>
					<compilerId>groovy-eclipse-compiler</compilerId>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-compiler</artifactId>
						<version>2.9.1-01</version>
					</dependency>
					<dependency>
						<groupId>org.codehaus.groovy</groupId>
						<artifactId>groovy-eclipse-batch</artifactId>
						<version>2.3.7-01</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<executions>
					<execution>
						<id>enforce-java-7-or-higher</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>1.7</version>
								</requireJavaVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			
			<!-- Integration tests -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<executions>
					<execution>
						<id>integration-test</id>
						<goals>
							<goal>integration-test</goal>
						</goals>
					</execution>
					<execution>
						<id>verify</id>
						<goals>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<argLine>-Xms256m -Xmx512m</argLine>
					<systemPropertyVariables>
						<!-- The MARY installation directory, as seen from our subproject's perspective: -->
						<mary.base>${basedir}/..</mary.base>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<phase>verify</phase>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- Unit tests -->
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<!--forkMode>pertest</forkMode -->
					<argLine>-Xms256m -Xmx512m -XX:MaxPermSize=128m</argLine>
					<excludes>
						<!--exclude>**/util/**/*.java</exclude -->
						<exclude>**/modules/MaryModuleTestCase.java</exclude>
					</excludes>
					<systemPropertyVariables>
						<mary.base>${project.parent.basedir.path}</mary.base>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>com.googlecode.maven-java-formatter-plugin</groupId>
				<artifactId>maven-java-formatter-plugin</artifactId>
				<configuration>
					<configFile>${user.dir}/eclipse-code-style.xml</configFile>
				</configuration>
				<dependencies>
					<dependency>
						<groupId>org.eclipse.text</groupId>
						<artifactId>org.eclipse.text</artifactId>
						<version>3.5.101</version>
					</dependency>
					<dependency>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>org.eclipse.jdt.core</artifactId>
						<version>3.10.0.v20140604-1726</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>buildnumber-maven-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>create</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>


	<!-- Reports generated when executing 'mvn site' -->
	<reporting>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<version>1.0-beta-1</version>
				<configuration>
					<url>http://localhost:8080/manager/text/</url>
					<server>mytomcat</server>
					<path>/${project.build.finalName}</path>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-project-info-reports-plugin</artifactId>
				<version>2.8</version>
				<reportSets>
					<reportSet>
						<reports>
							<report>index</report>
							<report>summary</report>
							<report>project-team</report>
							<report>license</report>
							<report>mailing-list</report>
							<report>issue-tracking</report>
							<report>scm</report>
							<report>cim</report>
							<report>modules</report>
							<report>dependency-management</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
			
			<!-- Generate javadoc -->
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<destDir>javadoc</destDir>
					<failOnError>false</failOnError>
					<skip>false</skip>
				</configuration>
				<reportSets>
					<reportSet>
						<id>default</id>
						<reports>
							<report>javadoc</report>
						</reports>
					</reportSet>
					<reportSet>
						<id>aggregate</id>
						<reports>
							<report>aggregate</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>

		</plugins>
	</reporting>
</project>
